--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.datasource.max-wait=10000
 spring.datasource.min-evictable-idle-time-millis=1000
 spring.datasource.min-idle=8
 spring.datasource.time-between-eviction-runs-millis=1
+
+# treat baseline as V1 version, so make the migration script as V2__create_shipwreck.sql
+flyway.baseline-on-migrate=true
+#flyway.validate-on-migrate=false
+# disable hibernate to use flyway instead
+spring.jpa.hibernate.ddl-auto=none
