--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ flyway.baseline-on-migrate=true
 #flyway.validate-on-migrate=false
 # disable hibernate to use flyway instead
 spring.jpa.hibernate.ddl-auto=none
+
+datasource.flyway.url=jdbc:h2:file:~/dasboot
+datasource.flyway.username=sa
+datasource.flyway.password=
+datasource.flyway.driver-class-name=org.h2.Driver
