--- a/pom.xml
+++ b/pom.xml
@@ -39,11 +39,11 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
 
-	<dependency>
-	  <groupId>junit</groupId>
-	  <artifactId>junit</artifactId>
-	  <version>3.8.1</version>
-	  <scope>test</scope>
-	</dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <!--make sure it's only running in test mode-->
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
